# pyprojroot2

./: .gitignore  LICENSE  Makefile  PublicInterface.md  README.md  environment-dev.yml  pyproject.toml  setup.cfg
.github/workflows/: python-build-test.yml
doc/: development.md  public_interface.md  reference.md
src/pyprojroot2/: __init__.py  cli.py  core_criteria.py  criteria.py  criterion.py  generic_criteria.py  here.py  predefined_criteria.py  predefined_roots.py  pyprojroot.py  pyprojroot_0_2_0.py  rhere.py  root.py  root_criterion.py  rprojroot.py
tests/: test_cli.py  test_core_criteria.py  test_criteria.py  test_here.py  test_imports.py  test_rhere.py
