[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyprojroot2"
version = "0.4.0"
authors = [
  { name="Achim Gädke", email="achim.gaedke@gmail.com" },
]
description = "pyprojroot version 2"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/achimgaedke/pyprojroot2"
"Bug Tracker" = "https://github.com/achimgaedke/pyprojroot2/issues"
